--- a/karacsony/masodik.html
+++ b/karacsony/masodik.html
@@ -32,6 +32,6 @@
         </div>
       </nav> 
 
-<img src="Karácsonyfa.png" alt="" class="img-fluid img-thumbnail">
+<img src="fa2.png" alt="">
 </body>
 </html>
