--- a/karacsony/harmadik.html
+++ b/karacsony/harmadik.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masodik</title>
+    <title>Harmadik</title>
      <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
@@ -33,6 +33,6 @@
         </div>
       </nav> 
 
-<img src="fa2.png" alt="" class="img-fluid">
+<img src="fa2.png" alt="">
 </body>
 </html>
