--- a/karacsony/index.html
+++ b/karacsony/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Karácsony</title>
      <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> 
+    <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -25,12 +26,12 @@
                 <a class="nav-link" href="masodik.html">Második</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Harmadik</a>
+                <a class="nav-link" href="harmadik.html">Harmadik</a>
               </li>
             </ul>
           </div>
         </div>
-    </nav>
+      </nav> 
 
 <img src="Karácsonyfa.png" alt="" class="img-fluid img-thumbnail">
 </body>
