--- a/Mitfozzek/index.html
+++ b/Mitfozzek/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="alap.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Mit főzzek ma?</title>
 </head>
