--- a/Mitfozzek/index.html
+++ b/Mitfozzek/index.html
@@ -24,7 +24,7 @@
             <span id="cal"></span>
             <span id="time"></span><br>
         </div>
-        <button onclick="RandomFood()" id="change">Mit főzzek ma?</button>
+        <button onclick="RandomKaja()" id="change">Mit főzzek ma?</button>
     </div>
 
 </body>
