--- a/Mitfozzek/index.html
+++ b/Mitfozzek/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="middle">
+    <div class="kozep">
         <h1 id="name"></h1><br>
         <div style="margin-bottom: 30px;">
         <a href="" target="_blank" id="link">
