--- a/HarryPotter/index.html
+++ b/HarryPotter/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
+    <title>KRK Harry Potter</title>
 </head>
 <body>
     <div id="kep" class="row" style="background-color: beige; text-align: center;">
